<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:custom="http://schemas.android.com/apk/res/it.giacomos.android"
    >
    
   <!--  item android:id="@+id/menu_radar"
       android:showAsAction="ifRoom|withText"
          android:title="@string/menu_radar" />
   
   <item android:id="@+id/menu_observations"
       android:showAsAction="ifRoom|collapseActionView"
       android:actionProviderClass="it.giacomos.android.osmer.widgets.actionView.ObservationsActionView"
       android:title="@string/menu_observations" />
   
   <item android:id="@+id/menu_webcam"
       android:showAsAction="ifRoom|withText"
          android:title="@string/menu_webcam" />
    
   <item android:id="@+id/menu_position"
          android:icon="@drawable/position"
          android:title="@string/menu_position" />
         android:showAsAction="ifRoom"/ -->
            
    <item android:id="@+id/menu_data_update_info"
          android:icon="@drawable/refresh"
          android:title="@string/menu_refresh" />
   
     <item android:id="@+id/menu_online_guide"
          android:icon="@drawable/online_guide"
          android:title="@string/menu_online_guide" />

       
     <item android:id="@+id/menu_author_info"
          android:icon="@drawable/author_info"
          android:title="@string/menu_author_info" />
       
    <item android:id="@+id/menu_config_info"
          android:icon="@drawable/config_info"
          android:title="@string/menu_config_info" />
     
     
    <item android:id="@+id/menu_info"
          android:icon="@drawable/info"
          android:title="@string/menu_info" />
    
</menu>